# durin

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
bslz4/src/: bitshuffle.c  bitshuffle.h  bitshuffle_core.c  bitshuffle_core.h  bitshuffle_internals.h  iochain.c  iochain.h  lz4.c
src/: err.c  err.h  file.c  file.h  filters.c  filters.h  plugin.c  plugin.h  test.c
test/: generic_data_plugin.f90  test_generic_client.f90  test_generic_host.f90
